This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: _posixsubprocess.o compilation error on CentOS 5.8
Type: compile error Stage: resolved
Components: Build Versions: Python 3.2, Python 3.3
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: rosslagerwall Nosy List: Alzakath, gregory.p.smith, python-dev, rosslagerwall
Priority: normal Keywords: patch

Created on 2012-03-18 08:04 by Alzakath, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
_posixmodule.patch Alzakath, 2012-03-18 08:04 review
Messages (5)
msg156237 - (view) Author: Hervé Coatanhay (Alzakath) * Date: 2012-03-18 08:04
Linux Version:
2.6.18-238.19.1.el5 / CentOS release 5.8 (Final)

On changeset 75803:b26056192653 , I have the following compilation error:

gcc -pthread -fPIC -fno-strict-aliasing -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -IInclude -I. -I./Include -I/usr/local/include -I/home/proexp/cpython2 -c /home/proexp/cpython2/Modules/_posixsubprocess.c -o build/temp.linux-x86_64-3.3/home/proexp/cpython2/Modules/_posixsubprocess.o
/home/proexp/cpython2/Modules/_posixsubprocess.c: In function ‘_close_open_fd_range_safe’:
/home/proexp/cpython2/Modules/_posixsubprocess.c:207: erreur: ‘O_CLOEXEC’ undeclared (first use in this function)
/home/proexp/cpython2/Modules/_posixsubprocess.c:207: erreur: (Each undeclared identifier is reported only once
/home/proexp/cpython2/Modules/_posixsubprocess.c:207: erreur: for each function it appears in.)


The problem is the too old kernel version provided on CentOS 5 and RHEL 5 whic does not support O_CLOEXEC. I join my proposed patch for this issue.
msg156252 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2012-03-18 13:57
New changeset fe1dfc066a38 by Ross Lagerwall in branch 'default':
Issue 14359: Only use O_CLOEXEC in _posixmodule.c if it is defined.
http://hg.python.org/cpython/rev/fe1dfc066a38
msg156274 - (view) Author: Gregory P. Smith (gregory.p.smith) * (Python committer) Date: 2012-03-18 20:35
please apply this to 3.2 as well.
msg156312 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2012-03-19 04:13
New changeset 09371e2ae84d by Ross Lagerwall in branch '3.2':
Issue #14359: Only use O_CLOEXEC in _posixmodule.c if it is defined.
http://hg.python.org/cpython/rev/09371e2ae84d

New changeset 0d5fcbfd646f by Ross Lagerwall in branch 'default':
Merge with 3.2 for #14359.
http://hg.python.org/cpython/rev/0d5fcbfd646f
msg156349 - (view) Author: Ross Lagerwall (rosslagerwall) (Python committer) Date: 2012-03-19 16:52
Thanks!
History
Date User Action Args
2022-04-11 14:57:28adminsetgithub: 58567
2012-03-19 16:52:54rosslagerwallsetstatus: open -> closed
resolution: fixed
messages: + msg156349

stage: resolved
2012-03-19 04:13:55python-devsetmessages: + msg156312
2012-03-18 20:35:33gregory.p.smithsetversions: + Python 3.2
nosy: + gregory.p.smith, rosslagerwall

messages: + msg156274

assignee: rosslagerwall
2012-03-18 13:57:23python-devsetnosy: + python-dev
messages: + msg156252
2012-03-18 08:04:38Alzakathcreate