Issue #14359: Only use O_CLOEXEC in _posixmodule.c if it is defined.

Based on patch from Hervé Coatanhay.